tests/compile_fail/display/rename_all_on_struct.stderr
error: `#[display(rename_all="...")]` can not be specified on structs or variants
 --> tests/compile_fail/display/rename_all_on_struct.rs:3:5
  |
3 |     #[display(rename_all = "lowercase")]
  |     ^

error: `#[display(rename_all="...")]` can not be specified on structs or variants
 --> tests/compile_fail/display/rename_all_on_struct.rs:8:1
  |
8 | #[display(rename_all = "lowercase")]
  | ^
